# Aframpwallet

./: .gitignore  Cargo.toml  README.md
circuits/: Cargo.toml
circuits/src/: lib.rs
contracts/: Cargo.toml
contracts/src/: groth16.rs  lib.rs  merkle_tree.rs
merchant-api/: Cargo.toml
merchant-api/src/: main.rs
merchant-dashboard/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
merchant-dashboard/src/: App.tsx  index.css
merchant-dashboard/src/components/: AppLayout.tsx  Navbar.tsx  StatsCard.tsx
merchant-dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  separator.tsx
merchant-dashboard/src/lib/wallet-wasm/: package.json  wallet_wasm.d.ts  wallet_wasm.js  wallet_wasm_bg.wasm  wallet_wasm_bg.wasm.d.ts
merchant-dashboard/src/pages/: Compliance.tsx  Dashboard.tsx  Features.tsx  Home.tsx  Landing.tsx  Onboarding.tsx  PaymentDemo.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
merchant-dashboard/src/services/: api.ts  wasmClient.ts
merchant-dashboard/src/types/: index.ts
merchant_data/fb554134482402b65026bd2b775042dbbce7b98b1b95f3cad2c8ac06db038402/: pk  vk
pos-client/: Cargo.toml
pos-client/src/: main.rs
privacy-circuits/src/: lib.rs
privacy-cli/: Cargo.toml
privacy-cli/src/: main.rs
privacy-contract/src/: lib.rs
privacy-contract/test_snapshots/test/: test_nullifier_rejects_double_spend.1.json  test_process_payment_full_flow.1.json
tools/: Cargo.toml
tools/src/: main.rs
wallet-app/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
wallet-app/src/screens/: ConfirmScreen.tsx  HistoryScreen.tsx  PaymentScreen.tsx  ScanScreen.tsx
wallet-app/src/services/: payment.ts  storage.ts
wallet-app/src/types/: index.ts
wallet-core/: Cargo.toml
wallet-core/src/: lib.rs
wallet-server/: Cargo.toml
wallet-server/src/: main.rs
wallet-wasm/: Cargo.toml
wallet-wasm/src/: lib.rs
