[package]
name = "wallet-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
circuits = { path = "../circuits" }
ark-bls12-381 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
rand = { workspace = true }
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
