[package]
name = "wallet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
wallet-core = { path = "../wallet-core" }
circuits = { path = "../circuits" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ark-groth16 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
