[package]
name = "wallet-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
privacy-circuits = { path = "../privacy-circuits" }
ark-bn254 = { workspace = true }
ark-ff = "0.4"
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"



